examples/k8s/caddy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: caddy
  namespace: bugzilla
  annotations:
    external-dns.alpha.kubernetes.io/hostname: bugzilla.ninja
spec:
  type: LoadBalancer
  ports:
  - port: 80
    name: http
  - port: 443
    name: https
  selector:
    app: caddy
